RESOLVED FIXED165622
Defer sending Mach messages if the queue is full
https://bugs.webkit.org/show_bug.cgi?id=165622
Summary Defer sending Mach messages if the queue is full
Anders Carlsson
Reported 2016-12-08 13:07:57 PST
Defer sending Mach messages if the queue is full
Attachments
Patch (11.17 KB, patch)
2016-12-08 13:15 PST, Anders Carlsson
beidson: review+
Anders Carlsson
Comment 1 2016-12-08 13:15:28 PST
WebKit Commit Bot
Comment 2 2016-12-08 13:17:56 PST
Attachment 296556 [details] did not pass style-queue: ERROR: Source/WebKit2/Platform/IPC/mac/MachMessage.cpp:39: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WTF/wtf/spi/darwin/XPCSPI.h:81: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2016-12-08 14:54:28 PST
Blaze Burg
Comment 4 2016-12-13 13:06:15 PST
Comment on attachment 296556 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=296556&action=review > Source/WebKit2/Platform/IPC/mac/MachMessage.h:49 > + bool m_shouldFreeDescriptors; Any reason to not initialize here?
Alexey Proskuryakov
Comment 5 2016-12-14 09:26:09 PST
*** Bug 129896 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6 2016-12-14 09:27:00 PST
*** Bug 149585 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.