Source/WTF/wtf/spi/darwin/XPCSPI.h
@@ -23,8 +23,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef XPCSPI_h
-#define XPCSPI_h
+#pragma once
 
 #include <dispatch/dispatch.h>
 #include <os/object.h>
@@ -77,6 +76,10 @@ typedef void (*xpc_connection_handler_t)(xpc_connection_t connection);
 
 #if USE(APPLE_INTERNAL_SDK)
 #include <xpc/private.h>
+#else
+enum {
+    DISPATCH_MACH_SEND_POSSIBLE = 0x8,
+};
 #endif
 
 WTF_EXTERN_C_BEGIN
@@ -157,5 +160,3 @@ void xpc_release(xpc_object_t);
 #endif
 
 WTF_EXTERN_C_END
-
-#endif // XPCSPI_h
