Source/WebKit2/Platform/IPC/Connection.h
@@ -78,6 +78,8 @@ enum class WaitForOption {
     } \
 while (0)
 
+class MachMessage;
+
 class Connection : public ThreadSafeRefCounted<Connection> {
 public:
     class Client : public MessageReceiver {
@@ -239,7 +241,11 @@ private:
     void didReceiveSyncReply(OptionSet<SendSyncOption>);
 
     Seconds timeoutRespectingIgnoreTimeoutsForTesting(Seconds) const;
-    
+
+#if PLATFORM(COCOA)
+    bool sendMessage(std::unique_ptr<MachMessage>);
+#endif
+
     Client& m_client;
     bool m_isServer;
     std::atomic<bool> m_isValid { true };
@@ -320,6 +326,7 @@ private:
     mach_port_t m_receivePort;
     dispatch_source_t m_receiveSource;
 
+    std::unique_ptr<MachMessage> m_pendingOutgoingMachMessage;
 #if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED <= 101000
     void exceptionSourceEventHandler();
 
